--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "webpack": "^3.6.0"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
@@ -26,6 +28,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-env": "^1.6.0",
     "redux-devtools-extension": "^2.13.2"
   }
 }
