adding post-install to package.json

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test": "test"
   },
   "scripts": {
+    "post-install": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
