--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "test"
   },
   "scripts": {
-    "post-install": "webpack",
+    "postinstall": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
