--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-image": "^1.0.1",
+    "react-menu": "0.0.10",
+    "react-menus": "^2.0.8",
     "react-modal": "^2.3.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
