--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-preset-react": "^6.24.1",
     "lodash": "^4.17.4",
     "react": "^15.6.1",
+    "react-audio-player": "^0.6.2",
     "react-dom": "^15.6.1",
     "react-menu": "0.0.10",
     "react-menus": "^2.0.8",
