--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "babel-preset-react": "^6.24.1",
     "lodash": "^4.17.4",
     "react": "^15.6.1",
-    "react-audio-player": "^0.6.2",
     "react-dom": "^15.6.1",
-    "react-menu": "0.0.10",
-    "react-menus": "^2.0.8",
     "react-modal": "^2.3.2",
+    "react-player": "^0.24.5",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
