--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "redux-devtools": "^3.4.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "webpack": "^3.6.0"
+    "webpack": "^3.8.1"
   },
-  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
   "main": "test.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
+    "start": "webpack --config webpack.config.js",
     "postinstall": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
